@@ -103,7 +103,7 @@
 		
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 		<maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
-		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+		<maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
 		<maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
 		<maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
 		<jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
@@ -128,7 +128,7 @@
 		<commons.io>2.15.1</commons.io>
 		<commons.lang3>3.14.0</commons.lang3>
 		<commons.exec>1.3</commons.exec>
-		<ngdbc.version>2.19.11</ngdbc.version>
+		<ngdbc.version>2.19.16</ngdbc.version>
 		<lucene.version>9.9.0</lucene.version>
 		<chemistry.version>1.1.0</chemistry.version>
 		<flowable.version>6.8.0</flowable.version>
@@ -301,6 +301,7 @@
 			</activation>
 			<properties>
 				<maven.javadoc.skip>true</maven.javadoc.skip>
+				<skipTCs>true</skipTCs>
 			</properties>
 			<build>
 				<plugins>
@@ -439,7 +440,7 @@
 							<dependency>
 								<groupId>com.github.spotbugs</groupId>
 								<artifactId>spotbugs</artifactId>
-								<version>4.8.2</version>
+								<version>4.8.3</version>
 							</dependency>
 						</dependencies>
 					</plugin>
@@ -540,7 +541,43 @@
 				</plugins>
 			</build>
 		</profile>
-
+		<profile>
+			<id>testcontainers</id>
+			<properties>
+				<skipTCs>false</skipTCs>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>${maven.compiler.plugin.version}</version>
+						<configuration>
+							<source>${maven.compiler.source}</source>
+							<target>${maven.compiler.target}</target>
+							<debug>true</debug>
+							<debuglevel>lines,vars,source</debuglevel>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${maven-surefire-plugin.version}</version>
+						<configuration>
+							<argLine>
+								--add-opens java.base/java.lang=ALL-UNNAMED
+								--add-opens java.base/java.math=ALL-UNNAMED
+								--add-opens java.base/java.util=ALL-UNNAMED
+								--add-opens
+								java.base/java.util.concurrent=ALL-UNNAMED
+								--add-opens java.base/java.net=ALL-UNNAMED
+								--add-opens java.base/java.text=ALL-UNNAMED
+							</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<repositories>
